--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
       </ul>
     </nav>
 
+    <div class="info">
+      <h1> I'm Anup Kumar</h1>
+      <p> Hi, I’m Anup Kumar, a Computer Science student and aspiring web developer. I enjoy building clean, responsive websites and learning how modern web applications work.</p>
+      <a href=""> Download CV</a>
+    </div>
   </div>
 
 
