--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     </nav>
 
     <div class="info">
-      <h1> I'm Anup Kumar</h1>
-      <p> Hi, I’m Anup Kumar, a Computer Science student and aspiring web developer. I enjoy building clean, responsive websites and learning how modern web applications work.</p>
+      <h1> I'm <span>Anup Kumar</span></h1>
+      <p> Hi, I’m Anup Kumar, a Computer Science student and aspiring web developer. <br> I enjoy building clean, responsive websites and learning how modern web applications work.</p>
       <a href=""> Download CV</a>
     </div>
   </div>
