added imges in website

--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
       <a href=""> Download CV</a>
     </div>
   </div>
+<div class="img-box">
+  <img src="images/LS20260131234426.png" class="back-img">
+  <img src="images/LS20260131234159.png" class="main-img">
 
+</div>
+  
 
 </body>
-</html>
+</html> 
