--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio Website </title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href=" https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
 </head>
 <body>
   <div class="hero">
@@ -24,12 +25,18 @@
       <p> Hi, I’m Anup Kumar, a Computer Science student and aspiring web developer. <br> I enjoy building clean, responsive websites and learning how modern web applications work.</p>
       <a href=""> Download CV</a>
     </div>
+    <div class="social-links">
+      <a href=""><i class="fab fa-linkedin"></i></a>
+      <a href=""><i class="fab fa-behance"></i></a>
+      <a href=""><i class="fab fa-dribbble"></i></a>
+   </div>
   </div>
 <div class="img-box">
   <img src="images/LS20260131234426.png" class="back-img">
   <img src="images/LS20260131234159.png" class="main-img">
 
 </div>
+
   
 
 </body>
